--- a/Prointer 4/res/layout/activity_consultar.xml
+++ b/Prointer 4/res/layout/activity_consultar.xml
@@ -13,8 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="77dp" >
+        android:layout_centerHorizontal="true" >
     </ListView>
 
 </RelativeLayout>
